# plato-room-deployment-approval

./: AUDIT_v0.1.1.md  README.md  plato-deployment.yml  pyproject.toml
.github/workflows/: deployment-gate.yml
plato_room_deployment_approval/: __init__.py  _mesh.py  gate.py  github_client.py  report.py  room.py
plato_room_deployment_approval/policies/: ci_must_pass.flx  coverage_no_drop.flx  enforce_rate_limit.flx  no_force_push.flx
tests/: test_gate.py  test_regression.py  test_report.py  test_room.py
